--- a/.github/workflows/publish-nodejs-node-opcua-to-GHCR.yaml
+++ b/.github/workflows/publish-nodejs-node-opcua-to-GHCR.yaml
@@ -76,3 +76,70 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           annotations: ${{ steps.meta.outputs.annotations }}
+
+
+  publish-cve-2022-21208-server:
+    runs-on: ubuntu-latest
+
+    permissions:
+      packages: write
+      contents: read
+
+    name: Package and Publish Node
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+# the licenses are fetched from the local git repository somehow...
+# we dont need to setup a license field as part of the labels
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/laboratory-for-safe-and-secure-systems/cve-2022-21208
+          tags: | 
+            type=raw,value=cve-2022-21208
+          labels: |
+            maintainer=Frozenbitz
+            org.opencontainers.image.authors=Frozenbitz
+            org.opencontainers.image.title=KRITIS3M-node-server
+            org.opencontainers.image.cve=cve-2022-21208
+            org.opencontainers.image.description=Uses cve-2022-21208; A OPC UA test server preconfigured to run a custom NodeSet2.xml for pentesting
+            org.opencontainers.image.documentation=https://github.com/Laboratory-for-Safe-and-Secure-Systems/motra-images/blob/main/opcua/server/nodejs-node-opcua/latest/README.md
+            org.opencontainers.image.url=https://github.com/Laboratory-for-Safe-and-Secure-Systems/motra-images/blob/main/opcua/server/nodejs-node-opcua/latest
+          annotations: |
+            org.opencontainers.image.authors=Frozenbitz
+            org.opencontainers.image.title=KRITIS3M-node-server
+            org.opencontainers.image.cve=cve-2022-21208
+            org.opencontainers.image.description=Uses cve-2022-21208; A OPC UA test server preconfigured to run a custom NodeSet2.xml for pentesting
+            org.opencontainers.image.documentation=https://github.com/Laboratory-for-Safe-and-Secure-Systems/motra-images/blob/main/opcua/server/nodejs-node-opcua/latest/README.md
+            org.opencontainers.image.url=https://github.com/Laboratory-for-Safe-and-Secure-Systems/motra-images/blob/main/opcua/server/nodejs-node-opcua/latest
+
+      - name: Login to ghcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: ${{ github.workspace }}/opcua/server/nodejs-node-opcua/latest
+          build-args: |
+            NODESET_MODEL=FullSystem.NodeSet2.xml
+          build-contexts: |
+            container_context=${{ github.workspace }}/opcua/server/nodejs-node-opcua/latest
+            nodeset_context=${{ github.workspace }}/meta/demo-nodeset2
+            companion_context=${{ github.workspace }}/meta/companion-specifications
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          annotations: ${{ steps.meta.outputs.annotations }}
